--- a/.github/workflows/onlytest.yml
+++ b/.github/workflows/onlytest.yml
@@ -1,5 +1,11 @@
 name: onlytest
-on: pull_request
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   test:
