use codecov-action@v2 #177

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,10 +21,7 @@ jobs:
       run: go install
 
     - name: Test code
-      run: go test -race -coverprofile="coverage.txt" -covermode=atomic github.com/michimani/gotwi/... -shuffle=on
-
-    - name: Upload code coverage to Codecov
-      run: bash <(curl -s https://codecov.io/bash)
+      run: go test github.com/michimani/gotwi/... -shuffle=on
 
   setup-release:
     name: Setup release
