--- a/.github/workflows/onlytest.yml
+++ b/.github/workflows/onlytest.yml
@@ -27,4 +27,4 @@ jobs:
       run: go test -race -coverprofile="coverage.txt" -covermode=atomic github.com/michimani/gotwi/... -shuffle=on
 
     - name: Upload code coverage to Codecov
-      run: bash <(curl -s https://codecov.io/bash)
+      uses: codecov/codecov-action@v2
