--- a/.github/workflows/onlytest.yml
+++ b/.github/workflows/onlytest.yml
@@ -3,9 +3,13 @@ on:
   push:
     branches:
       - main
+    paths:
+      - '**.go'
   pull_request:
     branches:
       - main
+    paths:
+      - '**.go'
 
 jobs:
   test:
