--- a/.github/workflows/onlytest.yml
+++ b/.github/workflows/onlytest.yml
@@ -5,11 +5,13 @@ on:
       - main
     paths:
       - '**.go'
+      - 'go.mod'
   pull_request:
     branches:
       - '**'
     paths:
       - '**.go'
+      - 'go.mod'
 
 jobs:
   test:
